fix home horizontal scroll

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -42,6 +42,7 @@ mat-drawer-container {
 .main-content {
     background-size: cover;
     background-image: url("../../../assets/img/login-background.jpg");
+    overflow-x: hidden;
 }
 
 #bg-blur{
